--- a/index.html
+++ b/index.html
@@ -2,107 +2,183 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Zengex Docs</title>
-    <link rel="icon" href="favicon.ico" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Zengex Language Documentation — Modular syntax for clarity, emotion, and secure expression." />
+    <title>Zengex Language Documentation</title>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
+        background-color: #0f1117;
+        color: #e3e6f0;
+        line-height: 1.6;
+        padding: 2rem;
+        min-height: 100vh;
+    }
+
+    header {
+        border-bottom: 1px solid #2a2d37;
+        margin-bottom: 2rem;
+        padding-bottom: 1rem;
+    }
+
+    h1 {
+        color: #00ffe1;
+        font-size: 2.5rem;
+        font-weight: 700;
+    }
+
+    nav {
+        margin-top: 1rem;
+    }
+
+    nav a {
+        color: #a0aec0;
+        text-decoration: none;
+        margin-right: 1.5rem;
+        transition: color 0.3s ease;
+        font-weight: 500;
+    }
+
+    nav a:hover,
+    nav a:focus {
+        color: #ffffff;
+    }
+
+    section {
+        margin-bottom: 3rem;
+    }
+
+    h2 {
+        color: #7dd3fc;
+        margin-bottom: 0.5rem;
+        font-size: 1.8rem;
+        font-weight: 600;
+    }
+
+    h3 {
+        color: #93c5fd;
+        margin-top: 1.5rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.4rem;
+        font-weight: 600;
+    }
+
+    p {
+        margin-bottom: 1rem;
+    }
+
+    ul {
+        margin-left: 1.5rem;
+        margin-bottom: 1rem;
+        list-style-type: disc;
+    }
+
+    code {
+        background-color: #1e212b;
+        padding: 0.2rem 0.4rem;
+        border-radius: 4px;
+        color: #93c5fd;
+        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
+        font-size: 0.95em;
+    }
+
+    pre {
+        background-color: #1a1c23;
+        padding: 1rem;
+        border-radius: 6px;
+        overflow-x: auto;
+        margin-top: 1rem;
+        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
+        font-size: 0.9em;
+    }
+
+    footer {
+        border-top: 1px solid #2a2d37;
+        padding-top: 1rem;
+        font-size: 0.9rem;
+        color: #666;
+        text-align: center;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 600px) {
         body {
-            font-family: 'Fira Code', monospace, monospace, monospace;
-            background-color: #0f1117;
-            color: #e3e6f0;
-            line-height: 1.6;
-            padding: 2rem;
-        }
-        header {
-            border-bottom: 1px solid #2a2d37;
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
-        }
-        h1 {
-            color: #00ffe1;
-            font-size: 2.5rem;
-        }
-        nav {
-            margin-top: 1rem;
-        }
-        nav a {
-            color: #a0aec0;
-            text-decoration: none;
-            margin-right: 1.5rem;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #ffffff;
-        }
-        section {
-            margin-bottom: 3rem;
-        }
-        h2 {
-            color: #7dd3fc;
-            margin-bottom: 0.5rem;
-            font-size: 1.8rem;
-        }
-        code {
-            background-color: #1e212b;
-            padding: 0.2rem 0.4rem;
-            border-radius: 4px;
-            color: #93c5fd;
-            font-family: 'Fira Code', monospace;
-        }
-        pre {
-            background-color: #1a1c23;
             padding: 1rem;
-            border-radius: 6px;
-            overflow-x: auto;
-            margin-top: 1rem;
         }
-        footer {
-            border-top: 1px solid #2a2d37;
-            padding-top: 1rem;
-            font-size: 0.9rem;
-            color: #666;
+
+        nav a {
+            display: inline-block;
+            margin: 0.25rem 1rem 0.25rem 0;
         }
-    </style>
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+        }
+    }
+</style>
+
 </head>
 <body>
-    <header>
-        <h1>Zengex Documentation</h1>
-        <nav>
-            <a href="#overview">Overview</a>
-            <a href="#syntax">Syntax</a>
-            <a href="#spec">Spec</a>
-        </nav>
-    </header>
-    <main>
-        <section id="overview">
-            <h2>Overview</h2>
-            <p>Zengex is a fork of English engineered for high clarity, precision, and modular syntax. It is optimized for formal reasoning, protocol documentation, and security by obscurity.</p>
-        </section>
-        <section id="syntax">
-            <h2>Syntax</h2>
-            <p>The syntax is mostly the same as English, for now. Here are some main differences:</p>
-            <p><strong>Note:</strong> The “harder” or “softer” characters apply at the end of a sentence or phrase.</p>
-            <p>Example: <code>This is example text [harder]. Johnny stole the cake and ran [lighter].</code></p>
-            <p><em>Attributes like these express tone (e.g., “mean” or “nice”). They are optional but recommended for clarity.</em></p>
-        </section>
-        <section id="spec">
-            <h2>Specifications</h2>
-            <p>Zengex adheres to the following design pillars:</p>
-            <ul>
-                <li>High user friendliness</li>
-                <li>Completely reworked</li>
-                <li>Security via obscurity</li>
-                <li>Optimized and slightly cryptographic workflow</li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 Zengex Initiative — Structured Thought. Codified.</p>
-    </footer>
+
+<header>
+    <h1>Zengex Documentation</h1>
+    <nav>
+        <a href="#overview">Overview</a>
+        <a href="#syntax">Syntax</a>
+        <a href="#modifiers">Modifiers</a>
+        <a href="#spec">Specifications</a>
+    </nav>
+</header>
+
+<main>
+    <section id="overview">
+        <h2>Overview</h2>
+        <p>Zengex is a fork of English engineered for clarity, logical precision, and modular expression. It is designed for protocol documentation, formal reasoning, and optionally obfuscated communication patterns.</p>
+    </section>
+
+    <section id="syntax">
+        <h2>Syntax</h2>
+        <p>The syntax initially mirrors conventional English, but introduces specific enhancements.</p>
+        <p>Key attributes are appended at the end of statements or phrases to indicate tone or intent.</p>
+    </section>
+
+    <section id="modifiers">
+        <h2>Modifiers</h2>
+        <h3>Emotive Modifiers</h3>
+        <p>End-of-line markers provide contextual tone. These are optional but strongly encouraged for unambiguous expression.</p>
+        <pre><code>This is an example sentence [harder]. Johnny stole the cake and ran [lighter].</code></pre>
+    </section>
+
+    <section id="spec">
+        <h2>Specifications</h2>
+        <p>Zengex adheres to the following design principles:</p>
+        <ul>
+            <li>High user friendliness</li>
+            <li>Redesigned from linguistic primitives up</li>
+            <li>Layered obfuscation for protocol hardening</li>
+            <li>Optimized and slightly cryptographic workflow</li>
+        </ul>
+    </section>
+</main>
+
+<footer>
+    <p>© 2025 Zengex Initiative — Structured Thought. Codified.</p>
+</footer>
+
 </body>
 </html>
+
