--- a/index.html
+++ b/index.html
@@ -5,132 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Zengex Language Documentation — Modular syntax for clarity, emotion, and secure expression." />
     <title>Zengex Language Documentation</title>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
 
-    body {
-        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
-        background-color: #0f1117;
-        color: #e3e6f0;
-        line-height: 1.6;
-        padding: 2rem;
-        min-height: 100vh;
-    }
+    <!-- Fira Code font link from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
 
-    header {
-        border-bottom: 1px solid #2a2d37;
-        margin-bottom: 2rem;
-        padding-bottom: 1rem;
-    }
-
-    h1 {
-        color: #00ffe1;
-        font-size: 2.5rem;
-        font-weight: 700;
-    }
-
-    nav {
-        margin-top: 1rem;
-    }
-
-    nav a {
-        color: #a0aec0;
-        text-decoration: none;
-        margin-right: 1.5rem;
-        transition: color 0.3s ease;
-        font-weight: 500;
-    }
-
-    nav a:hover,
-    nav a:focus {
-        color: #ffffff;
-    }
-
-    section {
-        margin-bottom: 3rem;
-    }
-
-    h2 {
-        color: #7dd3fc;
-        margin-bottom: 0.5rem;
-        font-size: 1.8rem;
-        font-weight: 600;
-    }
-
-    h3 {
-        color: #93c5fd;
-        margin-top: 1.5rem;
-        margin-bottom: 0.5rem;
-        font-size: 1.4rem;
-        font-weight: 600;
-    }
-
-    p {
-        margin-bottom: 1rem;
-    }
-
-    ul {
-        margin-left: 1.5rem;
-        margin-bottom: 1rem;
-        list-style-type: disc;
-    }
-
-    code {
-        background-color: #1e212b;
-        padding: 0.2rem 0.4rem;
-        border-radius: 4px;
-        color: #93c5fd;
-        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
-        font-size: 0.95em;
-    }
-
-    pre {
-        background-color: #1a1c23;
-        padding: 1rem;
-        border-radius: 6px;
-        overflow-x: auto;
-        margin-top: 1rem;
-        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
-        font-size: 0.9em;
-    }
-
-    footer {
-        border-top: 1px solid #2a2d37;
-        padding-top: 1rem;
-        font-size: 0.9rem;
-        color: #666;
-        text-align: center;
-    }
-
-    /* Responsive tweaks */
-    @media (max-width: 600px) {
-        body {
-            padding: 1rem;
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-        nav a {
-            display: inline-block;
-            margin: 0.25rem 1rem 0.25rem 0;
+        body {
+            font-family: 'Fira Code', monospace;
+            background-color: #0f1117;
+            color: #e3e6f0;
+            line-height: 1.6;
+            padding: 2rem;
+        }
+
+        header {
+            border-bottom: 1px solid #2a2d37;
+            margin-bottom: 2rem;
+            padding-bottom: 1rem;
         }
 
         h1 {
-            font-size: 2rem;
+            color: #00ffe1;
+            font-size: 2.5rem;
+        }
+
+        nav {
+            margin-top: 1rem;
+        }
+
+        nav a {
+            color: #a0aec0;
+            text-decoration: none;
+            margin-right: 1.5rem;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #ffffff;
+        }
+
+        section {
+            margin-bottom: 3rem;
         }
 
         h2 {
-            font-size: 1.5rem;
+            color: #7dd3fc;
+            margin-bottom: 0.5rem;
+            font-size: 1.8rem;
         }
 
         h3 {
-            font-size: 1.2rem;
+            color: #93c5fd;
+            margin-top: 1.5rem;
+            margin-bottom: 0.5rem;
+            font-size: 1.4rem;
         }
-    }
-</style>
 
+        code {
+            background-color: #1e212b;
+            padding: 0.2rem 0.4rem;
+            border-radius: 4px;
+            color: #93c5fd;
+        }
+
+        pre {
+            background-color: #1a1c23;
+            padding: 1rem;
+            border-radius: 6px;
+            overflow-x: auto;
+            margin-top: 1rem;
+        }
+
+        footer {
+            border-top: 1px solid #2a2d37;
+            padding-top: 1rem;
+            font-size: 0.9rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
 
@@ -181,4 +139,3 @@
 
 </body>
 </html>
-
